--- a/result/vata2.html
+++ b/result/vata2.html
@@ -64,6 +64,10 @@
             background-color: #f2f2f2 !important;
         }
 
+        tbody tr:nth-child(even) {
+            background-color: #f9f9f9;
+        }
+
         .text-center {
             text-align: center;
         }
